--- a/Project-2-EMS/App.xaml
+++ b/Project-2-EMS/App.xaml
@@ -1,11 +1,27 @@
 ﻿<Application x:Class="Project_2_EMS.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:views="clr-namespace:Project_2_EMS.Views"
+             xmlns:controls="clr-namespace:Project_2_EMS.Controls.ViewControls"
              StartupUri="MainWindow.xaml"
              ShutdownMode="OnLastWindowClose">
   
     <Application.Resources>
-      <Style TargetType="Label">
+        <!-- Login Views -->
+        <DataTemplate DataType="{x:Type controls:PatientLoginViewControl}">
+            <views:PatientLoginView/>
+        </DataTemplate>
+        <DataTemplate DataType="{x:Type controls:StaffLoginViewControl}">
+            <views:StaffLoginView/>
+        </DataTemplate>
+
+        <!-- User Views -->
+        <DataTemplate DataType="{x:Type controls:ReceptionistCalendarViewControl}">
+            <views:ReceptionistCalendarView/>
+        </DataTemplate>
+
+
+        <Style TargetType="Label">
         <Setter Property="Foreground" Value="#FFFFFF"/>
         <Setter Property="FontSize" Value="18"/>
         <!-- One Color Suggestion: #E1E4E8 -->
