--- a/Project-2-EMS/Views/ReceptionistViews/ReceptionistCalendarView.xaml
+++ b/Project-2-EMS/Views/ReceptionistViews/ReceptionistCalendarView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Project_2_EMS.Views.PatientLoginView"
+﻿<UserControl x:Class="Project_2_EMS.Views.ReceptionistCalendarView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
